k8s/services/minio/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: shopno-data
  labels:
    name: shopno-data
    app.kubernetes.io/part-of: shopnoltd
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
